package hu.johndoe.spl.ass3;

public abstract class Item implements Updatable {

    public Tile placedOn;

    @Override
    public void update () {

    }

    public void use (Animal user) {

    }

}
