package hu.johndoe.spl.ass3;

public enum PandaTrait {

    COWARD,
    JUMPY,
    SLEEPY

}
