package hu.johndoe.spl.ass3;

public interface Updatable {

    void update ();

}
