package hu.johndoe.spl.ass3;

public enum WaveType {

    RINGING,
    BEEPING,
    SLEEPING

}
